crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-29.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 50 50\">\n    <!-- preserved pseudo-classes aren't inlined -->\n    <style>\n        :root {\n            background: #fff;\n        }\n    </style>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
    <!-- preserved pseudo-classes aren't inlined -->
    <style>
        :root{background:#fff}
    </style>
</svg>
