crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-5.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- Existing styles should be retained -->\n    <style>\n        .st1 {\n            fill: red;\n        }\n        .st0 {\n            color: blue;\n        }\n    </style>\n    <rect width=\"100\" height=\"100\" class=\"st0 st1\" style=\"color:yellow\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- Existing styles should be retained -->
    
    <rect width="100" height="100" style="fill:red;color:#ff0"></rect>
</svg>
