crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-9.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- important inline styles take precedence over important styles -->\n    <style>\n        .red {\n            fill: red !important;\n        }\n        .blue {\n            fill: blue;\n        }\n    </style>\n    <rect width=\"100\" height=\"100\" class=\"blue red\" style=\"fill:yellow !important\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- important inline styles take precedence over important styles -->
    <rect width="100" height="100" style="fill:#00f;fill:#ff0!important"/>
</svg>
